# monte-carlo-sim-CUDA

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  bates_kernel.cu  bates_kernel_extended.cu  bates_wrapper.cpp  bates_wrapper.cu  bates_wrapper_extended.cpp  build.sh  build_extended.sh  cache.py  calibration.py  docker-compose.yml  dvc.yaml  mc_pricer.py  nn_surrogate.py  notebook.ipynb  notebook_outputs.txt  params.yaml  pyproject.toml  requirements.txt  risk_metrics.py  rl_hedging.py  setup.py  test_bates.py  test_bates_extended.py  xva.py
.github/workflows/: ci.yml
api/: __init__.py  main.py  schemas.py
research/: __init__.py  ablation.py  benchmark.py  calibration_uq.py  challengers.py  claims.py  crisis.py  cross_sectional.py  cuda_tuning.py  curves.py  datasets.py  econometrics.py  error_decomposition.py  execution_microstructure.py  experiment_registry.py  forecasting.py  hedging.py  historical_backtest.py  hpc_scaling.py  identifiability.py  market_data.py  mlmc.py  model_risk.py  multiple_testing.py  paper_pack.py  performance.py  pipeline.py  portfolio_overlay.py  real_data_calibration.py  regime.py  reporting.py  repro.py  results_chapter.py  rough_bergomi.py  rough_full_calibration.py  rough_heston.py  state_space.py  statistics.py  structural_breaks.py  svi.py  (+2 more)
tests/: __init__.py  conftest.py  test_api_regressions.py  test_models.py  test_regressions.py  test_research_ablation.py  test_research_calibration_uq.py  test_research_challengers.py  test_research_claims.py  test_research_crisis.py  test_research_cross_sectional.py  test_research_cuda_tuning.py  test_research_curves.py  test_research_datasets.py  test_research_econometrics.py  test_research_execution_microstructure.py  test_research_forecasting.py  test_research_hedging.py  test_research_historical_backtest.py  test_research_hpc_scaling.py  test_research_identifiability.py  test_research_market_data.py  test_research_mlmc.py  test_research_multiple_testing.py  test_research_pipeline.py  test_research_portfolio_overlay.py  test_research_real_data_calibration.py  test_research_regime.py  test_research_registry_paper.py  test_research_reporting.py  test_research_repro_hash.py  test_research_results_chapter.py  test_research_rough_bergomi.py  test_research_rough_full_calibration.py  test_research_rough_heston.py  test_research_state_space.py  test_research_statistics.py  test_research_structural_breaks.py  test_research_svi.py  test_research_traceability.py  (+2 more)
